2008-11-19 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx:
	  fixed 2314467: sdccman.lyx: fix "--" in command line parameters
	  thanks Mauro Giachero

2008-11-16 Borut Razem <borut.razem AT siol.net>

	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.5
	* doc/sdccman.lyx: documented fixed unnamed bit-field initialization

2008-11-15 Borut Razem <borut.razem AT siol.net>

	* src/pic16/glue.c, src/SDCC.y, src/SDCCast.c, src/SDCCglue.c,
	  src/SDCCsymt.c, src/SDCCsymt.h:
	  fixed RFE #2291335 : Unnamed bit-field initialization
	* support/regression/tests/bitfields.c:
	  added test case for RFE #2291335
	* support/regression/tests/bug-1981238.c:
	  don't initialize unnamed bit-fields

2008-11-11 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f25j10.h,
	  device/include/pic16/pic18f45j10.h: remove useless boilerplate

	* device/include/pic16/adc.h,
	  device/lib/pic16/libio/adc/adcbusy.c,
	  device/lib/pic16/libio/adc/adcclose.c,
	  device/lib/pic16/libio/adc/adcconv.c,
	  device/lib/pic16/libio/adc/adcopen.c,
	  device/lib/pic16/libio/adc/adcread.c,
	  device/lib/pic16/libio/adc/adcsetch.c: generalized, documented,
	  and fixed ADC routines to work for more target devices,
	  incorporates patch #2036130 by Nick Materer

2008-11-10 Steven Borley <steven.borley AT partnerelectronics.com>

	* device/include/ctype.h,
	* device/include/ds400rom.h,
	* device/include/ds80c390.h,
	* device/include/float.h,
	* device/include/math.h,
	* device/include/serial.h,
	* device/include/stdbool.h,
	* device/include/tinibios.h: replaced non-C89 '//' with '/* */',
	  patch 2195343
	* device/include/mcs51/C8051F336.h,
	* device/include/mcs51/C8051T600.h,
	* device/include/mcs51/C8051T610.h,
	* device/include/mcs51/C8051T630.h: new, added, patch 2183334
	  (svn commit by Maarten Brock <sourceforge.brock AT dse.nl>)

2008-11-10 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/mcs51/P89LPC922.h: fixed #2255989, thanks kubi57
